--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@headlessui/react": "^1.7.3",
     "daisyui": "^2.33.0",
     "firebase": "^9.12.1",
+    "leaflet": "^1.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "^5.3.3",
